# Rust-Web-Project

./: Cargo.toml  Dockerfile  RWP.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs  prisma.rs
src/fairings/: cors.rs
src/jobs/: mod.rs  print_hours.rs  print_minutes.rs
